--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
    <div class="container">
    	  <div class="description ">
   	<h1>
-  		Hello ,Welcome To My official Website
+  		Hello ,Welcome To My Avinci Club
   		<p>
-  		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  		Here should be a short introduction for Avinci club and a welcome message.</p>
   		<button class="btn btn-outline-secondary btn-lg">See more</button>
   	</h1>
   </div>
